// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper component testing should match snapshot first step 1`] = `
<div>
  <ul
    class="grid grid-cols-4 pt-6 pb-4 bg-zinc-700 dark:stepper-dark-bg shadow-box-icon-primary rounded-lg absolute -translate-y-10 z-10 w-11/12 dark:bg-gradient-pickled undefined"
    data-testid="stepper"
  >
    <li
      data-testid="step-content-0"
    >
      <div
        class="flex items-center w-full h-4 pl-[50%]"
      >
        <span
          class="stepper-dot-active"
        />
        <span
          class="1234 h-0.5 w-full bg-zinc-400"
        />
      </div>
      <p
        class="text-tremor-default dark:text-dark-tremor-content stepper-text-content text-xs text-white mt-2"
      >
        1. Product Info
      </p>
    </li>
    <li
      data-testid="step-content-2"
    >
      <div
        class="flex items-center w-full h-4"
      >
        <span
          class="h-0.5 w-[50%] bg-zinc-400"
        />
        <span
          class="stepper-dot"
        />
        <span
          class="h-0.5 w-[50%] bg-zinc-400"
        />
      </div>
      <p
        class="text-tremor-default stepper-text-content mt-2 text-silver dark:text-silver text-xs"
      >
        2. Media
      </p>
    </li>
    <li
      data-testid="step-content-3"
    >
      <div
        class="flex items-center w-full h-4"
      >
        <span
          class="h-0.5 w-[50%] bg-zinc-400"
        />
        <span
          class="stepper-dot"
        />
        <span
          class="h-0.5 w-[50%] bg-zinc-400"
        />
      </div>
      <p
        class="text-tremor-default stepper-text-content mt-2 text-silver dark:text-silver text-xs"
      >
        3. Social
      </p>
    </li>
    <li
      data-testid="last-step-content"
    >
      <div
        class="flex items-center w-full h-4"
      >
        <span
          class="h-0.5 w-[50%] bg-zinc-400"
        />
        <span
          class="stepper-dot"
        />
      </div>
      <p
        class="stepper-text-content mt-2 text-silver dark:silver"
      >
        4. Pricing
      </p>
    </li>
  </ul>
</div>
`;

exports[`Stepper component testing should match snapshot last step 1`] = `
<div>
  <ul
    class="grid grid-cols-4 pt-6 pb-4 bg-zinc-700 dark:stepper-dark-bg shadow-box-icon-primary rounded-lg absolute -translate-y-10 z-10 w-11/12 dark:bg-gradient-pickled undefined"
    data-testid="stepper"
  >
    <li
      data-testid="step-content-0"
    >
      <div
        class="flex items-center w-full h-4 pl-[50%]"
      >
        <span
          class="stepper-dot-active"
        />
        <span
          class="1234 h-0.5 w-full bg-white"
        />
      </div>
      <p
        class="text-tremor-default dark:text-dark-tremor-content stepper-text-content text-xs text-white mt-2"
      >
        1. Product Info
      </p>
    </li>
    <li
      data-testid="step-content-2"
    >
      <div
        class="flex items-center w-full h-4"
      >
        <span
          class="h-0.5 w-[50%] bg-white"
        />
        <span
          class="stepper-dot-active"
        />
        <span
          class="h-0.5 w-[50%] bg-white"
        />
      </div>
      <p
        class="text-tremor-default dark:text-dark-tremor-content stepper-text-content mt-2 text-white text-xs"
      >
        2. Media
      </p>
    </li>
    <li
      data-testid="step-content-3"
    >
      <div
        class="flex items-center w-full h-4"
      >
        <span
          class="h-0.5 w-[50%] bg-white"
        />
        <span
          class="stepper-dot-active"
        />
        <span
          class="h-0.5 w-[50%] bg-white"
        />
      </div>
      <p
        class="text-tremor-default dark:text-dark-tremor-content stepper-text-content mt-2 text-white text-xs"
      >
        3. Social
      </p>
    </li>
    <li
      data-testid="last-step-content"
    >
      <div
        class="flex items-center w-full h-4"
      >
        <span
          class="h-0.5 w-[50%] bg-white"
        />
        <span
          class="stepper-dot-active"
        />
      </div>
      <p
        class="stepper-text-content mt-2 text-white"
      >
        4. Pricing
      </p>
    </li>
  </ul>
</div>
`;
